# commissioning-issue-manager

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 504b9af8757e_create_users_table.py  521dc98d0fba_initial_migration.py  77d0a0dc1ce3_create_hotels_and_projects_tables.py  a1b2c3d4e5f6_align_schema_with_database_design_v1_2.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/clients/: __init__.py  ollama_client.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py
backend/app/db/: base.py  database.py  session.py
backend/app/models/: __init__.py  attachment.py  comment.py  enums.py  hotel.py  issue.py  project.py  room.py  room_type.py  user.py
backend/app/repositories/: __init__.py  attachment_repository.py  comment_repository.py  issue_repository.py  project_repository.py  room_repository.py  user_repository.py
backend/app/schemas/: __init__.py  ai.py  attachment.py  auth.py  comment.py  common.py  issue.py  project.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  comment_service.py  issue_service.py  project_service.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_migrations.py  test_models.py  test_session.py
backend/tests/ai/: __init__.py  test_ollama_client.py
backend/tests/core/: __init__.py  test_security.py
backend/tests/repositories/: conftest.py  test_attachment_repository.py  test_comment_repository.py  test_issue_repository.py  (+3 more)
(+39 files in other folders)
